--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ button[disabled] {
     font-size: 1rem;
     margin: 16px 0px 0px 0px;
     padding: 10px 15px;
-    background-color: blue; 
+    background-color: rgb(38, 38, 190); /* background color changed when screen size is 690px*/
   }
   
   #password {
